Fix: Corregir articleMapping en record-sale.js para registrar labels exactos

--- a/public/index.html
+++ b/public/index.html
@@ -1334,15 +1334,15 @@
                 { value: 440.00, label: '50304💎', imageUrl: '/image/icon-happy.png' },
             ] },
             { name: 'BLOOD STRIKE', logoUrl: '/image/bs.png', inputRequirement: 'id_only', amounts: [
-                { value: 0.89, label: '100+5🧈', imageUrl: '/image/100.png' },
-                { value: 2.50, label: '300+20🧈', imageUrl: '/image/300.png' },
-                { value: 4.30, label: '500+40🧈', imageUrl: '/image/500.png' },
-                { value: 8.50, label: '1000+100🧈', imageUrl: '/image/1000.png' },
-                { value: 17.60, label: '2000+200🧈', imageUrl: '/image/2000.png' },
-                { value: 42.00, label: '5000+800🧈', imageUrl: '/image/5000.png' },
-                { value: 3.50, label: 'PASE ELITE🧈', imageUrl: '/image/elite.png' },
-                { value: 8.51, label: 'PASE PREMIUM🧈', imageUrl: '/image/premium.png' },
-                { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: '/image/mejora.png' },
+                { value: 0.89, label: '100+5', imageUrl: '/image/100.png' },
+                { value: 2.50, label: '300+20', imageUrl: '/image/300.png' },
+                { value: 4.30, label: '500+40', imageUrl: '/image/500.png' },
+                { value: 8.50, label: '1000+100', imageUrl: '/image/1000.png' },
+                { value: 17.60, label: '2000+200', imageUrl: '/image/2000.png' },
+                { value: 42.00, label: '5000+800', imageUrl: '/image/5000.png' },
+                { value: 3.50, label: 'PASE ELITE', imageUrl: '/image/elite.png' },
+                { value: 8.51, label: 'PASE PREMIUM', imageUrl: '/image/premium.png' },
+                { value: 2.00, label: 'PASE DE NIVEL', imageUrl: '/image/mejora.png' },
             ] },
             { name: 'FREE FIRE', logoUrl: '/image/ff1.png', inputRequirement: 'id_name', amounts: [
                 { value: 1.80, label: '💎SEMANAL', imageUrl: '/image/ffs.png' },
@@ -1421,7 +1421,7 @@
             {
                 name: 'VENEZUELA',
                 code: 'VES',
-                exchangeRate: 143.5, // Tasa de cambio directa
+                exchangeRate: 144.5, // Tasa de cambio directa
                 symbol: 'Bs.',
                 imageUrl: '/image/paises/ve.png', // Ruta actualizada
                 paymentMethods: [
@@ -1432,7 +1432,7 @@
             {
                 name: 'COLOMBIA',
                 code: 'COP',
-                exchangeRate: 4250,
+                exchangeRate: 4150,
                 symbol: 'COP',
                 imageUrl: '/image/paises/co.png', // Ruta actualizada
                 paymentMethods: [
@@ -1480,7 +1480,7 @@
             {
                 name: 'ARGENTINA',
                 code: 'ARS',
-                exchangeRate: 1310,
+                exchangeRate: 1320,
                 symbol: '$',
                 imageUrl: '/image/paises/ar.png', // Ruta actualizada
                 paymentMethods: [
