Fix: Corregir error de sintaxis en index.html - agregar llave faltante en bloque if

--- a/public/index.html
+++ b/public/index.html
@@ -1290,13 +1290,13 @@
         // para una carga rápida de la página.
         const gameOptions = [
             { name: 'LORDS MOBILE', logoUrl: '/image/lm1.png', inputRequirement: 'id_name', amounts: [
-                { value: 5.20, label: '💎499+CUPON', imageUrl: '/image/prize-2.png' },
-                { value: 12.00, label: '💎999+CUPON', imageUrl: '/image/prize-3.png' },
+                //{ value: 5.20, label: '💎499+CUPON', imageUrl: '/image/prize-2.png' },
+                //{ value: 12.00, label: '💎999+CUPON', imageUrl: '/image/prize-3.png' },
                 { value: 20.00, label: '💎1999+CUPON', imageUrl: '/image/prize-4.png' },
-                { value: 25.50, label: '💎2499+CUPON', imageUrl: '/image/prize-5.png' },
-                { value: 30.00, label: '💎2999+CUPON', imageUrl: '/image/prize-6.png' },
+                //{ value: 25.50, label: '💎2499+CUPON', imageUrl: '/image/prize-5.png' },
+                //{ value: 30.00, label: '💎2999+CUPON', imageUrl: '/image/prize-6.png' },
                 { value: 48.50, label: '💎4999+CUPON', imageUrl: '/image/prize-7.png' },
-                { value: 95.00, label: '💎9999+CUPON', imageUrl: '/image/icon-happy.png' },    
+                //{ value: 95.00, label: '💎9999+CUPON', imageUrl: '/image/icon-happy.png' },    
                 {value: 2.30, label: 'PASE SEMANAL', imageUrl: '/image/7day.png' },
                 { value: 19.90, label: 'PASE MENSUAL', imageUrl: '/image/30day.png' },
                 { value: 2.30, label: '209💎', imageUrl: '/image/prize-2.png' },
