Fix: Corregir tilde en columna 📦Articulo para registro correcto en Excel

--- a/public/admin.html
+++ b/public/admin.html
@@ -427,6 +427,9 @@
     </style>
 </head>
 <body>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Login Form -->
     <div id="loginContainer" class="login-container">
         <div class="login-card">
@@ -775,3 +778,8 @@ Estado: ${order.Estado}
     </script>
 </body>
 </html>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js');
+}
+</script>
