--- a/public/admin.html
+++ b/public/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel de Pedidos - DHARCK STORE</title>
+    <title>PANEL DE PEDIDOS - DHARCK STORE</title>
     <link rel="icon" href="/image/logo1.png" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -1048,7 +1048,8 @@
             if (!confirm(`¿Estás seguro de eliminar el pedido ${orderId}? Esta acción no se puede deshacer.`)) {
                 return;
             }
-            
+             
+
             try {
                 const response = await fetch('/api/delete-pending-order', {
                     method: 'POST',
