--- a/public/panel.html
+++ b/public/panel.html
@@ -673,7 +673,7 @@
     <div id="adminPanel" style="display: none;">
         <div class="container">
             <div class="header">
-                <h1><i class="fas fa-tachometer-alt"></i> Panel de Administración</h1>
+                <h1><i class="fas fa-tachometer-alt"></i> Panel-de-Administración</h1>
                 <p>DHARCK STORE - Gestión de Pedidos y Configuración</p>
             </div>
 
