--- a/public/index.html
+++ b/public/index.html
@@ -1257,13 +1257,13 @@
                 badge: '🔥Cupon +25%',
                 animation: 'promo-pulse',
                 articles: [
-                 '💎499+CUPON',
-                 '💎999+CUPON',
+               //  '💎499+CUPON',
+                // '💎999+CUPON',
                  '💎1999+CUPON',
-                 '💎2499+CUPON',
-                 '💎2999+CUPON',
+               //  '💎2499+CUPON',
+               //  '💎2999+CUPON',
                  '💎4999+CUPON',
-                 '💎9999+CUPON',
+              //   '💎9999+CUPON',
               ] // Artículos en promoción
             },
 
