--- a/public/panel.html
+++ b/public/panel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PANEL DE PEDIDOS - DHARCK STORE</title>
+    <title>PANEL DE PEDIDOS | DHARCK STORE</title>
     <link rel="icon" href="/image/logo1.png" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -674,7 +674,7 @@
         <div class="container">
             <div class="header">
                 <h1><i class="fas fa-tachometer-alt"></i> Panel de Administración</h1>
-                <p>DHARCK STORE - Gestión de Pedidos y Configuración</p>
+                <p>DHARCK STORE | Gestión de Pedidos y Configuración</p>
             </div>
 
             <!-- Navegación -->
