Fix: Corregir envío de datos en saveArticleSettings y reducir tamaño de botones de artículos

--- a/public/index.html
+++ b/public/index.html
@@ -1384,8 +1384,8 @@
             ] },
             
             { name: 'MOBILE LEGENDS', logoUrl: '/image/ml.png', inputRequirement: 'id_server_name', amounts: [
-                { value: 1.60, label: 'PASE SEMANAL ML', imageUrl: '/image/ml_pase.png' },
-                { value: 9.50, label: 'CREPUSCULAR', imageUrl: '/image/ml_pase.png' },
+                { value: 1.60, label: 'PASE SEMANAL ML', imageUrl: '/image/ml7.png' },
+                { value: 9.50, label: 'CREPUSCULAR', imageUrl: '/image/ml7.png' },
                 { value: 0.90, label: '50+5💎', imageUrl: '/image/ml1.png' },
                 { value: 2.80, label: '150+15💎', imageUrl: '/image/ml1.png' },
                 { value: 4.40, label: '250+25💎', imageUrl: '/image/ml2.png' },
