--- a/public/panel.html
+++ b/public/panel.html
@@ -771,28 +771,38 @@
             transform: translateX(14px);
         }
 
-        .promo-toggle {
+        .checkbox-group {
             display: flex;
             align-items: center;
-            gap: 4px;
+            margin: 5px 0;
         }
 
-        .promo-toggle label {
-            font-size: 0.75rem;
-            min-width: 40px;
+        .checkbox-group label {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            font-size: 14px;
         }
 
-        .promo-toggle input[type="checkbox"] {
-            width: 12px;
-            height: 12px;
+        .checkbox-group input[type="checkbox"] {
+            margin-right: 8px;
+            width: 18px;
+            height: 18px;
+            cursor: pointer;
+        }
+
+        .checkbox-label {
+            color: #333;
+            font-weight: 500;
         }
 
         .promo-badge {
-            background: #ff6b35;
+            margin-left: 8px;
+            background: #ff4444;
             color: white;
-            padding: 1px 4px;
+            padding: 2px 6px;
             border-radius: 4px;
-            font-size: 0.6rem;
+            font-size: 10px;
             font-weight: bold;
         }
 
@@ -2108,16 +2118,20 @@
                                    step="0.01" min="0" max="9999"
                                    onchange="updateArticlePrice('${gameName}', ${index}, this.value)">
                         </div>
-                        <div class="toggle-switch">
-                            <input type="checkbox" id="active_${index}" ${article.active ? 'checked' : ''} 
-                                   onchange="toggleArticleActive('${gameName}', ${index})">
-                            <span class="slider"></span>
+                        <div class="checkbox-group">
+                            <label>
+                                <input type="checkbox" id="active_${index}" ${article.active ? 'checked' : ''} 
+                                       onchange="toggleArticleActive('${gameName}', ${index})">
+                                <span class="checkbox-label">Activo</span>
+                            </label>
                         </div>
-                        <div class="promo-toggle">
-                            <label for="promo_${index}">Promoción:</label>
-                            <input type="checkbox" id="promo_${index}" ${article.promotion ? 'checked' : ''}
-                                   onchange="toggleArticlePromotion('${gameName}', ${index})">
-                            ${article.promotion ? '<span class="promo-badge">🔥PROMO</span>' : ''}
+                        <div class="checkbox-group">
+                            <label>
+                                <input type="checkbox" id="promo_${index}" ${article.promotion ? 'checked' : ''}
+                                       onchange="toggleArticlePromotion('${gameName}', ${index})">
+                                <span class="checkbox-label">Promoción</span>
+                                ${article.promotion ? '<span class="promo-badge">🔥PROMO</span>' : ''}
+                            </label>
                         </div>
                     </div>
                 `;
